@@ -18,37 +18,39 @@ twic.requests.subscribe('getTimeline', function(data, sendResponse) {
 		afterId = data['after'],
 		account = twic.accounts.getInfo(id);
 
-	// prepare tweets data and send the response
-	var replyWithTimeline = function(tweets, users) {
-		var
-			reply = { },
-			tweetId;
-
-		for (tweetId in tweets.items) {
-			var
-				tweet     = tweets.items[tweetId],
-				user      = users.items[tweet.fields['user_id']],
-				retweeted = tweet.fields['retweeted_user_id'] ? users.items[tweet.fields['retweeted_user_id']] : null;
-
-			reply[tweet.fields['id']] = {
-				'msg': tweet.fields['msg'],
-				'user': user.getPart(['id', 'screen_name', 'avatar']),
-				'retweeted': retweeted ? retweeted.getPart(['id', 'screen_name', 'avatar']) : null
-			};
-		}
-
-		sendResponse( {
-			'account': {
-				'id': account.fields['id'],
-				'name': account.user.fields['screen_name']
-			},
-			'data': reply
-		} );
-	};
-
 	if (account) {
+	    var
+	        unreadCount = account.fields['unread_tweets_count'];
+	
 		// we need to get the homeTimeline if user is in out accounts
-		twic.twitter.getHomeTimeline(id, replyWithTimeline, afterId);
+		twic.twitter.getHomeTimeline(id, function(tweets, users) {
+		    // prepare tweets data and send the response
+		    var
+			    reply = { },
+			    tweetId;
+
+		    for (tweetId in tweets.items) {
+			    var
+				    tweet     = tweets.items[tweetId],
+				    user      = users.items[tweet.fields['user_id']],
+				    retweeted = tweet.fields['retweeted_user_id'] ? users.items[tweet.fields['retweeted_user_id']] : null;
+
+			    reply[tweet.fields['id']] = {
+				    'msg': tweet.fields['msg'],
+				    'user': user.getPart(['id', 'screen_name', 'avatar']),
+				    'retweeted': retweeted ? retweeted.getPart(['id', 'screen_name', 'avatar']) : null,
+				    'separator': 0 === --unreadCount
+			    };
+		    }
+
+		    sendResponse( {
+			    'account': {
+				    'id': account.fields['id'],
+				    'name': account.user.fields['screen_name']
+			    },
+			    'data': reply
+		    } );
+	    }, afterId);
 
 		account.setValue('unread_tweets_count', 0);
 		account.save();
