@@ -1,5 +1,6 @@
 Development:
 	* Fix for the urls without protocol (thanks @Stammru)
+	+ Separator between unread and old tweets
 
 0.15:
 	* Fix for the error message is not showing
